bat.string1.lessons.bat.string1.StringX.scala.error
stringX:7: error: not found: value x
		if(i==0 && str(i)==x)
                                   ^stringX:9: error: not found: value x
		else if(i==str.length-1 && str(i)==x)
                                                   ^stringX:11: error: not found: value x
		else if(str(i)!=x)
                                ^